--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/shankarjatin/modgenics_backend_jatin#readme",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
