--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14"
