--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "url": "https://github.com/shankarjatin/modgenics_backend_jatin/issues"
   },
   "homepage": "https://github.com/shankarjatin/modgenics_backend_jatin#readme",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
