--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "homepage": "https://github.com/shankarjatin/modgenics_backend_jatin#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14"
